update to minecraft 1.20.2